nginx-example/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-example
  namespace: nginx-example
  labels:
    app: nginx-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-example
  template:
    metadata:
      labels:
        app: nginx-example
    spec:
      containers:
        - name: nginx-example
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 128Mi
