nginx-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-example
  namespace: nginx-example
spec:
  selector:
    app: nginx-example
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
